monitoring/grafana/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 15
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
            limits:
              memory: 100Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
            - name: config-volume
              mountPath: /etc/grafana/provisioning/dashboards/provider.yml
              subPath: provider.yml
            - name: dashboards
              mountPath: /etc/dashboards
            - name: data-volume
              mountPath: /var/lib/grafana
            - name: tls-crt
              mountPath: /etc/grafana/tls
        - name: sidecar-dashboards
          image: kiwigrid/k8s-sidecar
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              memory: 100Mi
          volumeMounts:
            - name: dashboards
              mountPath: /etc/dashboards
      volumes:
        - name: config-volume
          configMap:
            name: grafana-config
        - name: dashboards
          emptyDir: {}
        - name: data-volume
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: tls-crt
          secret:
            secretName: grafana.k8s.reiciunas.dev
