monitoring/grafana/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-grafana
  namespace: monitoring
spec:
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
  podSelector:
    matchLabels:
      app: grafana
  policyTypes:
    - Ingress
